<resources>
    <string name="app_name">Hw4</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="textAuthor">Нетология. Университет интернет-профессий будущего</string>
    <string name="textPublished">30 July at 16:30</string>
    <string name="textContent">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="textLikes">14</string>
    <string name="textShares">15</string>
    <string name="textViews">58980</string>
    <string name="menu_remove">Удалить</string>
    <string name="post_text">Напишите пост</string>
    <string name="menu_edit">Изменить</string>
    <string name="description_post_like">Like</string>
    <string name="error_empty_content">Контекст не может быть пустой</string>
    <string name="chooser_share_post" />
    <string name="text_intent_handler">Здесь будет текст\n поста </string>
    <string name="add_post">Добавить пост</string>
    <string name="save">Сохранить</string>
    <string name="google_play_unavailable">Google Api Недоступно</string>
    <string name="error_no_activity_to_open_media">Должно быть видео</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_posted">User %1$s posted new post</string>
    <string name="not_nown_action_notification">уведомление о неизвестном действии!</string>
    <string name="error_loading">Что-то пошло не так. Попробуйте позднее</string>
    <string name="retry_loading">Повторить</string>
    <string name="empty_posts">Постов нет.\nЕсли создадите новый пост, то он появится здесь</string>
    <string name="newer_post">Свежие записи</string>
    <string name="description_select_photo">Выбрать фото</string>
    <string name="description_take_photo">Сделать фото</string>
    <string name="description_photo">Фото</string>
    <string name="remove">Удалить</string>
    <string name="login">Войти в учетную запись</string>
    <string name="register">регистрация</string>
    <string name="logout">Выйти</string>
    <string name="sign_in_name">Вход в учетную запись</string>
    <string name="loginText">Введите имя</string>
    <string name="sign_in_button">Вход</string>
    <string name="password">Пароль</string>
    <string name="sign_name">Имя пользователя</string>
    <string name="sign_up_name">Регистрация</string>
    <string name="repeat_enter_password">повторите заного</string>
    <string name="sign_up_button">Вход</string>
    <string name="youDidIt">авторитизирован</string>
    <string name="password_error">Неверный пароль</string>
    <string name="error">опасноть, ошибка</string>
    <string name="pushed_button">кнопка нажата</string>
</resources>